Fix squashing of card images

--- a/src/style.css
+++ b/src/style.css
@@ -341,7 +341,6 @@ a:hover {
 
 img {
     max-width: 400px;
-    max-height: 300px;
     border-radius: 10px;
 }
 
